Section 5 Complete - Implement Clear ShoppingCart button - Fix updateItem() in ShoppingCartService, when removing from item (decreasing quantity to 0) to remove it from shopping cart alltogether - Refactor Code in ShoppingCartService, put public methods on top and private on bottom - Add thumbnail image to ShoppingCart table and improve layout design - Refactor code in ProductsComponent, remove Subscriptions and ngOnDestroy(), make variables Observable and unwrap them in the template, extract private methods for better code readability - Make itemsObject in ShoppingCart private

--- a/src/app/components/shopping-cart/shopping-cart.component.css
+++ b/src/app/components/shopping-cart/shopping-cart.component.css
@@ -7,3 +7,39 @@
 tr.mat-footer-row {
     font-weight: bold;
 }
+
+.clear-button {
+    margin: 15px;
+}
+
+.text-align-right {
+    text-align: right;
+}
+
+.text-align-center {
+    text-align: center;
+}
+
+.thumbnail-column {
+    width: 50px;
+    padding: 0 24px;
+}
+
+.thumbnail-wrapper {
+    width:50px;
+    height:50px;
+    margin: 8px 0;
+    overflow: hidden;
+    border-radius:50%;
+    position: relative;
+  }
+  
+  .thumbnail-wrapper img {
+    /* max-width:100%; */
+    max-height:100%;
+    width: auto;
+    position: absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%,-50%)
+  }
